--- a/Lyft Analytics Assignment.ipynb
+++ b/Lyft Analytics Assignment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Lfyt Analytics Assignment**"
+    "# **Lyft Analytics Assignment**"
    ]
   },
   {
@@ -415,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rides_times = rides_times.pivot(index='ride_id', columns='event', values='timestamp')"
@@ -560,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Extract the features from drivers\n",
@@ -572,7 +576,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Extract the features from rides_timestamps\n",
@@ -587,7 +593,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a new columen from the index and drop unwanted columns\n",
@@ -1045,7 +1053,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rides = rides[(rides.ride_distance > 500) & (rides.ride_distance < 40000)]"
@@ -1157,7 +1167,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rides = rides[rides.ride_duration < 2000]"
@@ -1342,7 +1354,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rides = rides[rides.accepted_time < 60]"
@@ -1939,7 +1953,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for row in rides.index:\n",
@@ -2081,7 +2097,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Determine the amount of time a driver has worked\n",
@@ -2233,7 +2251,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Take the start day and week that a driver starts and the last day they worked \n",
@@ -2355,7 +2375,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Take the count of a drivers journeys over their lifetime\n",
@@ -2410,7 +2432,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Take the sum of a drivers responsetimes over their lifetime\n",
@@ -2517,7 +2541,9 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define the scaler\n",
