--- a/Lyft Analytics Assignment.ipynb
+++ b/Lyft Analytics Assignment.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I am going to conduct some Exploratory Data Analysis as well as do some Featire Engineering to better understand the main factors that affect a driver’s lifetime value. I will then do some modelling to find the optimal features for predicting churn."
+    "I am going to conduct some Exploratory Data Analysis as well as do some Feature Engineering to better understand the main factors that affect a driver’s lifetime value. I will then do some modelling to find the optimal features for predicting churn."
    ]
   },
   {
