--- a/Lyft Analytics Assignment.ipynb
+++ b/Lyft Analytics Assignment.ipynb
@@ -785,7 +785,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Explotatory data analysis"
+    "## Exploratory data analysis"
    ]
   },
   {
@@ -1016,7 +1016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ride distance ranges from -2 to 724679. It seems implausable to have a negative distance and the upper limit of the 7+ hours."
+    "The ride distance ranges from -2 to 724679. It seems implausible to have a negative distance and the upper limit of the 7+ hours."
    ]
   },
   {
@@ -1942,7 +1942,7 @@
     "- **Minimum Fare** - \\$5.00\n",
     "- **Maximum Fare** - \\$400.00\n",
     "\n",
-    "I will calculated the fare for each journey.\n",
+    "I will calculate the fare for each journey.\n",
     "\n",
     "Lyft fares are calculated by -\n",
     "\n",
@@ -2512,7 +2512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will use Logistic Regression to try and predict churn determine.\n",
+    "I will use Logistic Regression to try and predict churn.\n",
     "\n",
     "The target will be the churn variable I created previously.\n",
     "\n",
