--- a/Lyft Analytics Assignment.ipynb
+++ b/Lyft Analytics Assignment.ipynb
@@ -2734,7 +2734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Confucion Matrix"
+    "#### Confusion Matrix"
    ]
   },
   {
